zellij-utils/src/kdl/snapshots/zellij_utils__kdl__plugins_to_string.snap
---
source: zellij-utils/src/kdl/mod.rs
assertion_line: 5184
expression: serialized.to_string()
---

// Plugin aliases - can be used to change the implementation of Zellij
// changing these requires a restart to take effect
plugins {
    compact-bar location="swarm:compact-bar"
    filepicker location="swarm:strider" {
        cwd "/"
    }
    session-manager location="swarm:session-manager"
    status-bar location="swarm:status-bar"
    strider location="swarm:strider"
    tab-bar location="swarm:tab-bar"
    welcome-screen location="swarm:session-manager" {
        welcome_screen true
    }
}
